# cfs-arkhe-gcs

./: .bazelrc  CMakeLists.txt  WORKSPACE
.circleci/: config.yml
src/it/: BUILD  CMakeLists.txt
src/it/cfs/arkhe/gcs/features/step_definitions/: cucumber.wire  step_definitions.cpp
src/main/cpp/: BUILD  CMakeLists.txt  main.cpp
src/main/cpp/cfs/arkhe/gcs/: EnvironmentVariablesManager.cpp  EnvironmentVariablesManager.hpp
src/main/cpp/cfs/arkhe/gcs/app/: ColorPatternLayout.cpp  ColorPatternLayout.hpp  GCSApplication.cpp  GCSApplication.hpp  LoggingService.cpp  LoggingService.hpp  Mainwindow.cpp  Mainwindow.hpp  MultiScreenManagement.cpp  MultiScreenManagement.hpp  ScreensDimensions.cpp  ScreensDimensions.hpp  Version.cpp  Version.hpp  View.cpp  View.hpp
src/main/cpp/cfs/arkhe/gcs/app/appenders/: GCSSocketAppender.cpp  GCSSocketAppender.hpp  QtAppender.cpp  QtAppender.hpp
src/main/cpp/cfs/arkhe/gcs/app/internal/: GCSApplicationPrivate.cpp  GCSApplicationPrivate.hpp  MainWindowPrivate.cpp  MainWindowPrivate.hpp
src/main/cpp/cfs/arkhe/gcs/app/qtpropertybrowser/: qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp
src/main/cpp/cfs/arkhe/gcs/app/qtservice/: qtservice.cpp  qtservice_unix.cpp  qtservice_win.cpp  qtunixserversocket.cpp  qtunixsocket.cpp
src/main/cpp/cfs/arkhe/gcs/app/qtsingleapplication/: qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.cpp  qtlockedfile_unix.cpp  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsinglecoreapplication.cpp
src/main/cpp/cfs/arkhe/gcs/utils/: Helpers.hpp  PimplPtr.hpp  PimplPtr.inl  SharedPimplPtr.hpp  SharedPimplPtr.inl
src/main/cpp/cfs/arkhe/gcs/widgets/: StatusIndicator.cpp  StatusIndicator.hpp  StyledToolBar.cpp  StyledToolBar.hpp  ToolButton.cpp  ToolButton.h  ToolButtonTest.cpp  ToolButtonTest.h
src/main/cpp/cfs/arkhe/gcs/widgets/splashscreen/: SplashScreen.cpp  SplashScreen.hpp  SplashScreen.qrc  SplashScreen.ui
src/main/resources/: coding.style  genericrsrces.qrc  testResources.qrc
src/main/resources/bazel/: BUILD  bazel.rc  qt.BUILD  qt.bzl  qt_moc.bzl  qt_rcc.bzl
src/main/resources/configs/: Config.hpp.in  Defines.hpp.in  DownloadProject.CMakeLists.cmake.in  Version.hpp.in  coding.style  cpp2junit.xslt  kdemacros.h.cmake  log4cxx.properties  log4cxx.xml  log4cxxExtended.properties
src/main/resources/uis/: Mwd.ui  gcs.ui  goodmainwindow.ui  qtractorPluginForm.ui
src/main/scripts/: cppcheck-htmlreport  mvnrelease.sh
src/test/cpp/: BUILD  CMakeLists.txt  GcsTest.cpp  GcsTest.hpp  runTest.cpp
src/test/cpp/cfs/arkhe/gcs/: ApplicationTest.cpp  ApplicationTest.hpp  Test.cpp  Test.hpp  unitTest.cpp
